Refatoração nos Controllers e Services